@@ -21,9 +21,12 @@ package org.elasticsearch.tools.launchers;
 
 import org.elasticsearch.tools.launchers.BootstrapJvmOptions.PluginInfo;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Properties;
 
+import static java.util.Collections.emptyList;
+import static java.util.Collections.singletonList;
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.is;
@@ -32,14 +35,14 @@ import static org.junit.Assert.assertThat;
 public class BootstrapJvmOptionsTests extends LaunchersTestCase {
 
     public void testGenerateOptionsHandlesNoPlugins() {
-        final List<String> options = BootstrapJvmOptions.generateOptions(List.of());
+        final List<String> options = BootstrapJvmOptions.generateOptions(emptyList());
         assertThat(options, is(empty()));
     }
 
     public void testGenerateOptionsIgnoresNonBootstrapPlugins() {
         Properties props = new Properties();
         props.put("type", "isolated");
-        List<PluginInfo> info = List.of(new PluginInfo(List.of(), props));
+        List<PluginInfo> info = singletonList(new PluginInfo(emptyList(), props));
 
         final List<String> options = BootstrapJvmOptions.generateOptions(info);
         assertThat(options, is(empty()));
@@ -48,24 +51,24 @@ public class BootstrapJvmOptionsTests extends LaunchersTestCase {
     public void testGenerateOptionsHandlesBootstrapPlugins() {
         Properties propsWithoutJavaOpts = new Properties();
         propsWithoutJavaOpts.put("type", "bootstrap");
-        PluginInfo info1 = new PluginInfo(List.of("/path/first.jar"), propsWithoutJavaOpts);
+        PluginInfo info1 = new PluginInfo(singletonList("/path/first.jar"), propsWithoutJavaOpts);
 
         Properties propsWithEmptyJavaOpts = new Properties();
         propsWithEmptyJavaOpts.put("type", "bootstrap");
         propsWithEmptyJavaOpts.put("java.opts", "");
-        PluginInfo info2 = new PluginInfo(List.of("/path/second.jar"), propsWithEmptyJavaOpts);
+        PluginInfo info2 = new PluginInfo(singletonList("/path/second.jar"), propsWithEmptyJavaOpts);
 
         Properties propsWithBlankJavaOpts = new Properties();
         propsWithBlankJavaOpts.put("type", "bootstrap");
         propsWithBlankJavaOpts.put("java.opts", "   \t\n  ");
-        PluginInfo info3 = new PluginInfo(List.of("/path/third.jar"), propsWithBlankJavaOpts);
+        PluginInfo info3 = new PluginInfo(singletonList("/path/third.jar"), propsWithBlankJavaOpts);
 
         Properties propsWithJavaOpts = new Properties();
         propsWithJavaOpts.put("type", "bootstrap");
         propsWithJavaOpts.put("java.opts", "-Dkey=value -DotherKey=otherValue");
-        PluginInfo info4 = new PluginInfo(List.of("/path/fourth.jar"), propsWithJavaOpts);
+        PluginInfo info4 = new PluginInfo(singletonList("/path/fourth.jar"), propsWithJavaOpts);
 
-        final List<String> options = BootstrapJvmOptions.generateOptions(List.of(info1, info2, info3, info4));
+        final List<String> options = BootstrapJvmOptions.generateOptions(Arrays.asList(info1, info2, info3, info4));
         assertThat(
             options,
             contains(
